--- a/arquivos_site/site_vendas/index.html
+++ b/arquivos_site/site_vendas/index.html
@@ -196,17 +196,28 @@
       <!-- Fim da sessão produtos para venda -->
 
       <!-- Início da sessão footer -->
-    <footer class="mt-4 mt-4 d-flex justify-content-end">
+    <footer class="mt-3 mt-3 d-flex justify-content-end">
       <div class="container">
         <div class="row">
-          <div class="col-md-4"><span>&copy; Copyright 2022 - Minha Marca</span></div>
-          <div class="col-md-4">
-            
-            <a href="" class="text-light ml-2"><i class="fab fa-facebook fa-lg"></i></a>
+          <div class="col-md-3"><span>&copy; Copyright 2022 - Minha Marca</span></div>
+          <a href="" class="text-light ml-2"><i class="fab fa-facebook fa-lg"></i></a>
             <a href="" class="text-light ml-2"><i class="fab fa-instagram fa-lg"></i></a>
              <a href="" class="text-light ml-2"><i class="fab fa-whatsapp fa-lg"></i></a>
-           </div>
-           <div class="col-md-4" id="links">
+
+          <div class="col-md-3"> 
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae harum provident deleniti odio excepturi error labore vero. Corporis sunt commodi praesentium consequuntur, veritatis minima, recusandae eius sequi, necessitatibus vitae ex!
+            </p>
+             </div>
+
+           <div class="col-md-3" id="links">
+            <a href="#">Quem Somos</a> <br>
+            <a href="#">Perguntas Frequentes</a> <br>
+            <a href="#">Meus pedidos</a> <br>
+            <a href="#">Trocas e devoluções</a>
+           </div> 
+
+           <div class="col-md-3" id="links">
             <a href="#">Quem Somos</a> <br>
             <a href="#">Perguntas Frequentes</a> <br>
             <a href="#">Meus pedidos</a> <br>
