--- a/arquivos_site/site_vendas/index.html
+++ b/arquivos_site/site_vendas/index.html
@@ -111,10 +111,10 @@
   
                 <div class="carousel-item active">
                   <img src="imagens/mulher_mesa.jpg" class="img-fluid">
-                  <div class="carousel-caption d-none d-md-block">
-                   <div style="color: #8f2424; float: right; margin-bottom: 160px; margin-right: -80px;">
-                      <h2><em>Peças com 50% de desconto</em></h2> <br> 
-                      <h4 style="color: gray;">Look para elas</h4>
+                  <div class="carousel-caption">
+                   <div style="color: #8f2424; float: right; margin-bottom:100px; margin-right: -80px;">
+                      <h1><em>Peças com 50% de desconto</em></h1> <br> 
+                      <h3 style="color: gray;">Look para elas</h3>
 
                      </div>
                   </div>
@@ -182,7 +182,7 @@
               <h3 style="text-align: center;">R$ 00,00</h3>
               <a href="" class="parcela">Ou 0X de R$ 00,00 sem juros</a>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3" class="parcela">
             <img src="imagens/jeans.jpg" class="img-fluid">
             <h4 style="text-align: center;">Calça Jeans adulto</h4>
               <h3 style="text-align: center;">R$ 00,00</h3>
@@ -201,7 +201,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-3">
-            <span> Reforço Escolar Construir  <br> &copy; Copyright 2022 </span>
+            <span> Minha Marca  <br> &copy; Copyright 2022 </span>
             </div>
 
             <div class="col-md-3">
