--- a/arquivos_site/site_vendas/novidades.html
+++ b/arquivos_site/site_vendas/novidades.html
@@ -158,7 +158,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-3">
-            <span> Reforço Escolar Construir  <br> &copy; Copyright 2022 </span>
+            <span> Minha Marca  <br> &copy; Copyright 2022 </span>
             </div>
 
             <div class="col-md-3">
