--- a/arquivos_site/site_vendas/index.html
+++ b/arquivos_site/site_vendas/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <script src="alertacadastro.js"></script>
     <title>Site Vendas</title>
     <link rel="icon" href="imagens/logo.jpeg">
   </head>
