--- a/arquivos_site/site_vendas/formulario.html
+++ b/arquivos_site/site_vendas/formulario.html
@@ -29,6 +29,11 @@
             <label for="">Email</label>
             <input type="email" nome="email" id="email">
         </div>
+
+        <div>
+            <label for="">Senha</label>
+            <input type="password" nome="senha" id="senha">
+        </div>
     </form>
 </body>
 </html>
