--- a/arquivos_site/site_vendas/formulario.html
+++ b/arquivos_site/site_vendas/formulario.html
@@ -20,7 +20,7 @@
                 <input type="email" nome="email" id="email" placeholder="Informe seu e-mail">
             </div>
 
-            <div class="half-box">
+            <div class="half-box spacing">
                 <label for="">Nome</label>
                 <input type="text" name="nome" id="nome" placeholder="Informe seu nome">
             </div>
@@ -30,7 +30,7 @@
                 <input type="text" nome="lastname" id="lastname" placeholder="Informe seu Sobrenome">
             </div>
 
-            <div class="half-box">
+            <div class="half-box spacing">
                 <label for="">Senha</label>
                 <input type="password" nome="password" id="password" placeholder="Informe sua senha">
             </div>
@@ -46,11 +46,13 @@
             </div>
 
             <div class="full-box">
-                <input type="submit" id="btn-submit" value="registrar">
+                <input type="submit" id="btn-submit" value="Registrar">
             </div>
         </form>
     </div>
     <p class="error-validation template"></p>
+   
+    <script src="js/alertacadastro.js"></script>
     
 </body>
 </html>
