--- a/arquivos_site/site_vendas/formulario.html
+++ b/arquivos_site/site_vendas/formulario.html
@@ -17,12 +17,12 @@
         <form id="register-form">
             <div class="full-box">
                 <label for="">E-mail</label>
-                <input type="email" nome="email" id="email" placeholder="Informe seu e-mail" data-min-length="3">
+                <input type="email" nome="email" id="email" placeholder="Informe seu e-mail" data-min-length="3" data-required data-email-validate>
             </div>
 
             <div class="half-box spacing">
                 <label for="">Nome</label>
-                <input type="text" name="nome" id="nome" placeholder="Informe seu nome">
+                <input type="text" name="nome" id="nome" placeholder="Informe seu nome" data-max-length="16" data-only-letters="">
             </div>
 
             <div class="half-box">
@@ -32,12 +32,12 @@
 
             <div class="half-box spacing">
                 <label for="">Senha</label>
-                <input type="password" nome="password" id="password" placeholder="Informe sua senha">
+                <input type="password" nome="password" id="password" placeholder="Informe sua senha" data-required>
             </div>
 
             <div class="half-box">
                 <label for=""> Confirmar Senha</label>
-                <input type="passconfirmation" nome="passconfirmation" id="passconfirmation" placeholder="Confirme sua senha">
+                <input type="passconfirmation" nome="passconfirmation" id="passconfirmation" placeholder="Confirme sua senha" data-equal="password" data-required>
             </div>
 
             <div class="full-box">
