--- a/arquivos_site/loja/index.html
+++ b/arquivos_site/loja/index.html
@@ -25,7 +25,7 @@
               <i class="fa-solid fa-magnifying-glass"></i>
             </button>
             <button class="btn btn-light my-2 my-sm-0" type="submit">
-             <a href="formulario.html"><i class="fa-solid fa-user"> </i>Entre ou Cadastre-se</a>
+             <a href="cadastro.html"><i class="fa-solid fa-user"> </i>Entre ou Cadastre-se</a>
             </button>
             <button class="btn btn-light my-sm-0" type="submit">
               <i class="fa-solid fa-cart-shopping"></i>Sua sacola
