--- a/arquivos_site/loja/novidades.html
+++ b/arquivos_site/loja/novidades.html
@@ -94,7 +94,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-3">
-              <img src="imagens/roupa_amarela.jpg" class="img-fluid">
+              <img onmouseover="alert('Roupa com desconto')" src="imagens/roupa_amarela.jpg" class="img-fluid">
               <h4 style="text-align: center;">Vestido Manga longa</h4>
               <h3 style="text-align: center;">R$ 00,00</h3>
               <a href="" class="parcela">Ou 0X de R$ 00,00 sem juros</a>
@@ -103,7 +103,7 @@
             <img src="imagens/vestido_branco.jpg" class="img-fluid">
             <h4 style="text-align: center;">Vestido Cetim branco</h4>
               <h3 style="text-align: center;">R$ 00,00</h3>
-              <a href="" class="parcela">Ou 0X de R$ 00,00 sem juros</a>
+              <a onmouseover="alert('Roupa com desconto')" href="" class="parcela">Ou 0X de R$ 00,00 sem juros</a>
           </div>
           <div class="col-md-3">
             <img src="imagens/conjunto.jpg" class="img-fluid">
