--- a/arquivos_site/loja/cadastro.html
+++ b/arquivos_site/loja/cadastro.html
@@ -47,6 +47,10 @@
         <input type="submit" id="btn-submit" value="Registrar">
       </div>
 
+      <div>
+       <button class="btn btn-light" type="submit"><a href="index.html">Voltar</a></button>
+      </div>
+
     </form>
   </div>
 
