--- a/arquivos_site/loja/index.html
+++ b/arquivos_site/loja/index.html
@@ -28,8 +28,7 @@
              <a href="cadastro.html"><i class="fa-solid fa-user"> </i>Entre ou Cadastre-se</a>
             </button>
             <button class="btn btn-light my-sm-0" type="submit">
-              <i class="fa-solid fa-cart-shopping"></i>Sua sacola
-            </button>
+              <a href=""><i class="fa-solid fa-cart-shopping"></i>Sua sacola</a></button>
           </form>
           </div>
         </nav> 
