--- a/arquivos_site/loja/index.html
+++ b/arquivos_site/loja/index.html
@@ -195,6 +195,32 @@
       </section>
       <!-- Fim da sessão produtos para venda -->
 
+      <section class="caixa">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-2">
+              <img src="imagens/roupa_amarela.jpg" class="img-fluid">
+            </div>
+          <div class="col-md-2">
+            <img src="imagens/vestido_branco.jpg" class="img-fluid">
+          </div>
+          <div class="col-md-2">
+            <img src="imagens/conjunto.jpg" class="img-fluid">
+          </div>
+          <div class="col-md-2" class="parcela">
+            <img src="imagens/jeans.jpg" class="img-fluid">
+          </div>
+          <div class="col-md-2" class="parcela">
+            <img src="imagens/jeans.jpg" class="img-fluid">
+          </div>
+          <div class="col-md-2" class="parcela">
+            <img src="imagens/jeans.jpg" class="img-fluid">
+          </div>
+        </div>
+        </div>
+
+      </section>
+
       <!-- Início da sessão footer -->
 
       <footer class="mt-4 mt-4 d-flex justify-content-end">
