--- a/arquivos_site/loja/index.html
+++ b/arquivos_site/loja/index.html
@@ -199,19 +199,10 @@
         <div class="container">
           <div class="row">
             <div class="col-md-2">
-              <img src="imagens/roupa_amarela.jpg" class="img-fluid">
+              <img src="imagens/roupa_amarela.jpg" class="img-fluid" style="border-radius: 150px;">
             </div>
           <div class="col-md-2">
-            <img src="imagens/vestido_branco.jpg" class="img-fluid">
-          </div>
-          <div class="col-md-2">
-            <img src="imagens/conjunto.jpg" class="img-fluid">
-          </div>
-          <div class="col-md-2" class="parcela">
-            <img src="imagens/jeans.jpg" class="img-fluid">
-          </div>
-          <div class="col-md-2" class="parcela">
-            <img src="imagens/jeans.jpg" class="img-fluid">
+            <img src="imagens/conjunto.jpg" class="img-fluid" style="border-radius: 150px;">
           </div>
           <div class="col-md-2" class="parcela">
             <img src="imagens/jeans.jpg" class="img-fluid">
