--- a/arquivos_site/loja/index.html
+++ b/arquivos_site/loja/index.html
@@ -197,16 +197,26 @@
 
       <section class="caixa">
         <div class="container">
+          <h2>Tendências Primavera</h2>
           <div class="row">
             <div class="col-md-2">
-              <img src="imagens/roupa_amarela.jpg" class="img-fluid" style="border-radius: 150px;">
+              <img src="imagens/foto1.jpg" class="img-fluid" style="border-radius: 150px 150px;">
             </div>
           <div class="col-md-2">
-            <img src="imagens/conjunto.jpg" class="img-fluid" style="border-radius: 150px;">
+            <img src="imagens/foto2.jpg" class="img-fluid" style="border-radius: 150px;">
           </div>
           <div class="col-md-2" class="parcela">
-            <img src="imagens/jeans.jpg" class="img-fluid">
+            <img src="imagens/foto3.jpg" class="img-fluid" style="border-radius: 150px;">
           </div>
+          <div class="col-md-2">
+            <img src="imagens/foto1.jpg" class="img-fluid" style="border-radius: 150px;">
+          </div>
+        <div class="col-md-2">
+          <img src="imagens/foto2.jpg" class="img-fluid" style="border-radius: 150px;">
+        </div>
+        <div class="col-md-2" class="parcela">
+          <img src="imagens/foto3.jpg" class="img-fluid" style="border-radius: 150px;">
+        </div>
         </div>
         </div>
 
