--- a/arquivos_site/loja/index.html
+++ b/arquivos_site/loja/index.html
@@ -200,7 +200,34 @@
           <h2>Tendências Primavera</h2>
           <div class="row">
             <div class="col-md-2">
-              <img src="imagens/foto1.jpg" class="img-fluid" style="border-radius: 150px 150px;">
+              <img src="imagens/foto1.jpg" class="img-fluid" style="border-radius: 150px;">
+            </div>
+          <div class="col-md-2">
+            <img src="imagens/foto2.jpg" class="img-fluid" style="border-radius: 150px;">
+          </div>
+          <div class="col-md-2" class="parcela">
+            <img src="imagens/foto3.jpg" class="img-fluid" style="border-radius: 150px;">
+          </div>
+          <div class="col-md-2">
+            <img src="imagens/foto1.jpg" class="img-fluid" style="border-radius: 150px;">
+          </div>
+        <div class="col-md-2">
+          <img src="imagens/foto2.jpg" class="img-fluid" style="border-radius: 150px;">
+        </div>
+        <div class="col-md-2" class="parcela">
+          <img src="imagens/foto3.jpg" class="img-fluid" style="border-radius: 150px;">
+        </div>
+        </div>
+        </div>
+
+      </section>
+
+      <section class="caixa">
+        <div class="container">
+          <h2>Tendências Verão</h2>
+          <div class="row">
+            <div class="col-md-2">
+              <img src="imagens/foto1.jpg" class="img-fluid" style="border-radius: 150px;">
             </div>
           <div class="col-md-2">
             <img src="imagens/foto2.jpg" class="img-fluid" style="border-radius: 150px;">
